# ig2direct_bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  Secrets.toml  docker-compose.yml
src/: bot.rs  error.rs  main.rs  secrets.rs
