[package]
name = "ig2direct-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
teloxide = { version = "0.12.2", features = ["macros"] }
thiserror = "1.0.58"
thirtyfour = "0.32.0"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.14"